Fixed misaligned line numbers.

--- a/app/static/css/code.css
+++ b/app/static/css/code.css
@@ -4,10 +4,15 @@
 
 .pre-scrollable {
     max-height: 640px;
+    border: 1px lightgray solid;
+}
+
+td.linenos {
+    vertical-align: top;
 }
 
 .linenos {
-    border: #F5F5F5 2px solid;
+    background: #F5F5F5;
     padding-left: 5px;
     padding-right: 10px;
 }
